# aisg_controller_c-

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md
.github/workflows/: ci.yml
RET/: .gitignore  CMakeLists.txt  README.md
RET/cmake/: arm-none-eabi-gcc.cmake
RET/docs/: CONFORMIDADE_AISG2.md  HARDWARE.md
RET/include/ret/: ret_hdlc.h  ret_protocol.h
RET/platform/host/: ret_host.c
RET/platform/stm32f4/: main.c  ret_board_config.h  ret_flash_storage.c  ret_flash_storage.h  ret_stm32_platform.c  ret_stm32_platform.h  stm32f405rg_flash.ld  stm32f4xx_hal_conf.h  stm32f4xx_it.c
RET/src/: ret_hdlc.c  ret_protocol.c
RET/tests/: test_ret.c
docs/: COMPATIBILITY.md
include/atc/: adb.hpp  aisg.hpp  aisg3.hpp  controller.hpp  domain.hpp  hdlc.hpp  posix_serial_transport.hpp  simulated_transport.hpp  transport.hpp
licenses/: ret_aisg2-MIT.txt
resources/: antenna-tilt-controller.desktop
scripts/: build-linux.sh  package-linux.sh
simulador_serial/: .gitignore  README.md  __init__.py  monitor_serial.py  simulador_serial.py
simulador_serial/tests/: __init__.py  test_monitor_serial.py  test_simulador_serial.py
src/: adb.cpp  aisg.cpp  aisg3.cpp  controller.cpp  domain.cpp  hdlc.cpp  posix_serial_transport.cpp  simulated_transport.cpp
src/gui/: backend.cpp  backend.hpp  main.cpp  main_window.cpp  main_window.hpp
tests/: test_main.cpp
